为 银行账户增加 mail.thread 以及 表单视图，出现过  余额balance 重复计算的问题

--- a/core/views/core_view.xml
+++ b/core/views/core_view.xml
@@ -404,6 +404,26 @@
 				</tree>
 			</field>
 		</record>
+        <record id="bank_account_form" model="ir.ui.view">
+            <field name="name">bank.account.form</field>
+            <field name="model">bank.account</field>
+            <field name="arch" type="xml">
+                <form string="账户" delete="false" create="false" edit="false">
+                    <sheet>
+                        <group>
+                            <field name="name" />
+                            <field name="num" />
+                            <field name="balance" />
+                            <field name='active' invisible='0' />
+                        </group>
+                    </sheet>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers" />
+                        <field name="message_ids" widget="mail_thread" />
+                    </div>
+                </form>
+            </field>
+        </record>
 		<record id="bank_account_search" model="ir.ui.view">
             <field name="name">bank.account.search</field>
             <field name="model">bank.account</field>
