--- a/finance/views/finance_view.xml
+++ b/finance/views/finance_view.xml
@@ -102,7 +102,7 @@
                     <field name="period_id"/>
                     <field name="name"/>
                     <field name="date"/>
-                    <field name="amount_text" widget="bgcolor" bgcolor="info" bgsize="4"/>
+                    <field name="amount_text" bgcolor="info" bgsize="4"/>
                     <field name="line_ids" widget="relation_sublist" options="{'field': 'name'}"
                             string='凭证摘要'/>
                     <field name="line_ids" widget="relation_sublist" options="{'field': 'account_id'}"
@@ -170,8 +170,8 @@
                             icon="fa-search" class="oe_highlight"/>
                     <field name='name'/>
                     <field name='account_id'/>
-                    <field name='debit' sum='借方合计' widget="bgcolor" color="success"/>
-                    <field name='credit' sum='贷方合计' widget="bgcolor" color="primary"/>
+                    <field name='debit' sum='借方合计' color="success"/>
+                    <field name='credit' sum='贷方合计' color="primary"/>
                     <field name='partner_id'/>
                     <field name='auxiliary_id'/>
                     <field name='goods_id' groups='finance.group_account_goods'/>
