--- a/finance/wizard/checkout_checklist_wizard.xml
+++ b/finance/wizard/checkout_checklist_wizard.xml
@@ -53,7 +53,7 @@
                     <footer>
                         <button string="关闭" special="cancel" class="oe_link" />
 
-                        <button string="结账" special="cancel" class="oe_highlight" attrs="{ 'invisible': [('result','=','error')]  }"/>
+                        <button string="结账" name="close_period" type="object" class="oe_highlight" attrs="{ 'invisible': [('result','=','error')]  }"/>
                     </footer>
                 </form>
             </field>
