--- a/asset/views/asset_action.xml
+++ b/asset/views/asset_action.xml
@@ -14,7 +14,7 @@
         </record>
 		<!-- 固定资产折旧 action -->
         <act_window id="create_depreciation_action"
-        	name='计提折旧'
+        	name='固定资产折旧'
 	        res_model="create.depreciation.wizard"
 	        multi="True"
 	        view_type="form"
